Fix double scroll bars

--- a/src/react/Components/FeatureTimelineGrid.scss
+++ b/src/react/Components/FeatureTimelineGrid.scss
@@ -100,4 +100,5 @@
 
 .timeline-splitter {
     position: static;
+    height: calc(100% - 32px);
 }
